--- a/templates/supervisord.conf.j2
+++ b/templates/supervisord.conf.j2
@@ -20,6 +20,9 @@ logfile_backups=10
 
 
 [program:zookeeper]
+environment=
+    JVMFLAGS="{{ zookeeper_java_opts }} -Xmx{{ hivemq_heap }}m -Xms{{ hivemq_heap }}m",
+    JMXPORT="{{ zookeeper_jmx_port }}"
 command={{ zookeeper_dir }}/bin/zkServer.sh start-foreground
 autostart=true
 autostart=true
